syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ovh.cds.sdk.grpcplugin.actionplugin";
option java_outer_classname = "ActionPluginProto";
option go_package = "actionplugin";

package actionplugin;

import "google/protobuf/empty.proto";

// To generate the go files run:
// libprotoc 3.10.1
// go get -u github.com/golang/protobuf/protoc-gen-go@v1.3.5
// protoc --go_out=plugins=grpc:. *.proto

message ActionPluginManifest {
    string name = 1;
    string version = 2;
    string description = 3;
    string author = 4;
}

message ActionQuery {
    map<string, string> options = 1;
    int64 jobID = 2;
}

message ActionResult {
    string status = 1;
    string details = 2;
}

message StreamResult {
    string status = 1;
    string details = 2;
    string logs = 3;
}

message WorkerHTTPPortQuery {
    int32 port = 1;
}

service ActionPlugin {
    rpc Manifest (google.protobuf.Empty) returns (ActionPluginManifest) {}
    rpc Run (ActionQuery) returns (ActionResult) {}
    rpc Stream (ActionQuery) returns (stream StreamResult) {}
    rpc WorkerHTTPPort (WorkerHTTPPortQuery) returns (google.protobuf.Empty) {}
    rpc Stop (google.protobuf.Empty) returns (google.protobuf.Empty) {}
}
